[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "stl_rs"
version = "0.1.3"
description = "Fast STL decomposition implemented in Rust"
authors = [{name = "Thomas Q", email = "thomasqsa@gmail.com"}]
keywords = ["time-series", "stl", "decomposition", "statistics"]
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]

[tool.maturin]
features = ["pyo3/extension-module"]
